--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,5 @@
-body {
-  padding: 0;
-  margin: 0;
-}
-
-#map,
-body,
-html {
-  height: 100%;
+/* Ensure the map container fills the screen */
+#map {
+  width: 100%;
+  height: 100vh; /* Adjust based on your layout preferences */
 }
