--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,3 +3,20 @@
   width: 100%;
   height: 100vh; /* Adjust based on your layout preferences */
 }
+
+/* Legend styling */
+.legend {
+  padding: 6px 8px;
+  font: 14px Arial, Helvetica, sans-serif;
+  background: white;
+  background: rgba(255, 255, 255, 0.8);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+}
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
+}
