--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,7 @@
   background: rgba(255, 255, 255, 0.8);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
+  line-height: 1.5; /* Adjust line height for better readability */
 }
 .legend i {
   width: 18px;
@@ -19,4 +20,8 @@
   float: left;
   margin-right: 8px;
   opacity: 0.7;
+}
+.legend div {
+  padding-left: 26px; /* Make sure this is enough to prevent overlap with the color box */
+  height: 18px; /* Match the height of the color boxes */
 }
